[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/objects/aoes/Aoe.gd" type="Script" id=1]

[node name="Aoe" type="Sprite"]
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PoolVector2Array( -5, 2, 0, 9, 10, 7, 12, -2, 8, -6, 0, -8, -5, -4 )

[node name="DamageTick" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DelayedStart" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="LifeSpan" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="DamageTick" to="." method="_on_DamageTick_timeout"]
[connection signal="timeout" from="DelayedStart" to="." method="_on_DelayedStart_timeout"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_LifeSpan_timeout"]
